# mailcraft-by-evoq

./: .env.sample  LICENSE  README.md  pyproject.toml
.github/workflows/: django.yml
blog/: forms.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py
blog/templates/blog/: posts_list.html
config/: settings.py  urls.py
contacts/: forms.py  models.py  views.py
contacts/migrations/: 0001_initial.py  0002_initial.py
contacts/templates/contacts/list/: lists_detail.html  lists_list.html
frontend/: forms.py  views.py
frontend/management/commands/: load_demo_data.py
frontend/templates/frontend/: base.html  index.html
frontend/templates/frontend/includes/: inc_footer.html  inc_index_head_section.html  inc_menu.html
frontend/templatetags/: my_tags.py
logs/: models.py  views.py
logs/migrations/: 0001_initial.py  0002_initial.py
mailing/: cron.py  forms.py  models.py  service.py  urls.py  views.py
mailing/management/commands/: send_mail.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0002_mailing_owner.py
mailing/templates/mailing/: mailing_detail.html  mailing_form.html
mailing/templates/mailing/includes/: inc_mailing_card.html
service/: utils.py
static/: mailcraft_data.json
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: create_su.py  load_countries.py
users/migrations/: 0001_initial.py
users/templates/users/registration/: login.html  password.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
(+3 files in other folders)
